@@ -2,6 +2,7 @@
 
         * include/Rcpp/as.h: new bare_as to simplify uses of as
         * include/Rcpp/module/Module_generated_Factory.h: using bare_as
+        * R/Module.R: promoting the show method
 
 2012-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
